# python-videostream

./: CMakeLists.txt  README.md  pyproject.toml  setup.py
src/: bindings.c
