[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "videostream"
version = "0.1.0"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
description = "A Python package for streaming video with Python bindings."
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["video", "streaming", "ffmpeg"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
